--- a/home.html
+++ b/home.html
@@ -21,12 +21,57 @@
                     </div>
                 </div>
 
+                <div class="hamburger">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </div>
+
                 <div class="header-item">
                     <ul>
                         <li><a href="#">Starter Templates</a></li>
-                        <li><a href="#">Astra</a></li>
+                        <li class="menu-hover">
+                            <span>
+                                <a href="#">Astra</a>
+                            </span>
+
+                            <span class="chervon-down-icon">
+                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                            </span>
+
+                            <ul class="dropdown-menu">
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Knowledge Base</a></li>
+                                <li><a href="#">What's New</a></li>
+                                <li><a href="#">Contact & Support</a></li>
+                                <li><a href="#">Login to Account</a></li>
+                            </ul> <ul class="dropdown-menu">
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Knowledge Base</a></li>
+                                <li><a href="#">What's New</a></li>
+                                <li><a href="#">Contact & Support</a></li>
+                                <li><a href="#">Login to Account</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#">Pro</a></li>
-                        <li><a href="#">Resources</a></li>
+                        <li class="menu-hover">
+                            <span>
+                                <a href="#">Resources</a>
+                            </span>
+
+                            <span class="chervon-down-icon">
+                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                            </span>
+
+                            <ul class="dropdown-menu">
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Knowledge Base</a></li>
+                                <li><a href="#">What's New</a></li>
+                                <li><a href="#">Contact & Support</a></li>
+                                <li><a href="#">Login to Account</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#">Pricing</a></li>
                     </ul>
                 </div>
@@ -500,7 +545,7 @@
         </div>
     </section>
 
-    <footer class="site-footer">
+    <!-- <footer class="site-footer">
         <div class="primary-footer">
             <div class="footer-container">
                 <div class="footer-column">
@@ -594,7 +639,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
